# CornersGame

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/headers/: Bot.h  Button.h  Checker.h  Constants.h  Field.h  Game.h  Label.h  List.h
src/sources/: Bot.cpp  Button.cpp  Checker.cpp  Field.cpp  Game.cpp  Label.cpp
